# BizBopWhingWhang

BizBopWhingWhang/: BizBopWhingWhang.kicad_pcb  BizBopWhingWhang.kicad_prl  BizBopWhingWhang.kicad_pro  BizBopWhingWhang.kicad_sch  LEDSheet.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  usb_c_receptacle_usb2.0-connector.kicad_sym
BizBopWhingWhang/BizBopWhingWhang.pretty/: PD-1522CTR8.kicad_mod
BizBopWhingWhang/jlcpcb/: project.db
BizBopWhingWhang/jlcpcb/gerber/: BizBopWhingWhang-CuBottom.gbr  BizBopWhingWhang-CuTop.gbr  BizBopWhingWhang-EdgeCuts.gbr  BizBopWhingWhang-MaskBottom.gbr  BizBopWhingWhang-MaskTop.gbr  BizBopWhingWhang-NPTH.drl  BizBopWhingWhang-PTH.drl  BizBopWhingWhang-PasteBottom.gbr  BizBopWhingWhang-PasteTop.gbr  BizBopWhingWhang-SilkBottom.gbr  BizBopWhingWhang-SilkTop.gbr  BizBopWhingWhang-VScore.gbr
Code/bizbopwhingwhang/: CMakeLists.txt
Code/bizbopwhingwhang/bizbopwhingwhang/: CMakeLists.txt
Code/bizbopwhingwhang/bizbopwhingwhang/src/: main.cpp  main.h
